--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<div class="project-info hide-small">
 			<p class="project-no">No.1</p>
 			<h1 class="project-title">LINKEDIN<br>RECRUITER<br>REDESIGN<br></h1>
-			<p class="project-body">One of the projects that I was tasked to work on at DoubleDoor Technologies was to ideate and design the negotiation system between buyers and sellers within the website. The sprint lasted 2 weeks and involved designing the dashboard, experience of making an offer, and the counter offer experience.</p>
+			<p class="project-body">I chose to do an in-depth case study on LinkedIn Recruiter. In this case study, I researched and proposed potential hypotheses as to why the app was rated 1.2 out of 5 stars. With my hypotheses, I provided designs of solutions that take Recruiter towards the right direction.</p>
 			
 			<p class="project-categories">INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
 		</div>
