--- a/index.html
+++ b/index.html
@@ -29,6 +29,41 @@
   </div>
 </nav>
 
+<a class="navi" href="https://alvinliu-ixd.myportfolio.com/linkedin-recruiter-redesign-case-study">
+	<div class="rows topborder">
+		<div>
+			<p class="top">No.1</p>
+			<h1 class="mid">LINKEDIN RECRUITER REDESIGN</h1>
+			<p class="bot">INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
+		</div>
+		<h1 class="roman">I</h1>
+	</div>
+</a>
+
+<a href="https://alvinliu-ixd.myportfolio.com/elevate-by-reebok">
+	<div class="rows"> 
+		<div>
+			<p class="top">No.2</p>
+			<h1 class="mid">ELEVATE BY REEBOK</h1>
+			<p class="bot"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
+		</div>
+		<h1 class="roman">II</h1>
+	</div>
+</a>
+
+<a href="https://alvinliu-ixd.myportfolio.com/doubledoor-the-negotiation-system">
+	<div class="rows botborder">
+		<div>
+			<p class="top">No.3</p>
+			<h1 class="mid">DOUBLEDOOR NEGOTIATION SYSTEM</h1>
+			<p class="bot"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
+		</div>
+		<h1 class="roman">III</h1>
+	</div>
+</a>
+
+
+<!--
 <table class="table-of-contents">
 	<thead>
 		<tr>
@@ -36,7 +71,7 @@
 			<th>Project</th>
 			<th class="hide-small">Info</th>
 		</tr>
-	</thead>
+	</thead>	
 	<tbody>
 			<tr class="row-1">
 				<td class="col-1"> 1</td>
@@ -55,6 +90,9 @@
 		</tr>
 	</tbody>
 </table>
+-->
+<div class="space">	Hire me (: </div>
+
 <a href="https://alvinliu-ixd.myportfolio.com/linkedin-recruiter-redesign-case-study">
 	<div id="one" class="box">
 		<div class="project-info hide-small">
