--- a/index.html
+++ b/index.html
@@ -1,4 +1,113 @@
-="project-no">No.2</p>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<title>Alvin Liu - IxDesign</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300,400" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Libre+Franklin:400,700" rel="stylesheet">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+<link rel="stylesheet" type="text/css" href="css/override.css">
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-light">
+  <a class="navbar-brand" href="#">ALVIN LIU<br>IxDESIGNER</br></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+	<li class="nav-item">
+        <a class="nav-link" href="#about">ABOUT</a>
+     </li>
+     <li class="nav-item">
+        <a class="nav-link" href="https://alvinliu-ixd.myportfolio.com/contact">CONTACT</a>
+     </li>
+    </ul>
+  </div>
+</nav>
+
+<a class="navi" href="https://alvinliu-ixd.myportfolio.com/linkedin-recruiter-redesign-case-study">
+	<div class="rows topborder">
+		<div>
+			<p class="top">No.1</p>
+			<h1 class="mid">LINKEDIN RECRUITER REDESIGN</h1>
+			<p class="bot">INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
+		</div>
+		<h1 class="roman">I</h1>
+	</div>
+</a>
+
+<a href="https://alvinliu-ixd.myportfolio.com/elevate-by-reebok">
+	<div class="rows"> 
+		<div>
+			<p class="top">No.2</p>
+			<h1 class="mid">ELEVATE BY REEBOK</h1>
+			<p class="bot"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
+		</div>
+		<h1 class="roman">II</h1>
+	</div>
+</a>
+
+<a href="https://alvinliu-ixd.myportfolio.com/doubledoor-the-negotiation-system">
+	<div class="rows botborder">
+		<div>
+			<p class="top">No.3</p>
+			<h1 class="mid">DOUBLEDOOR NEGOTIATION SYSTEM</h1>
+			<p class="bot"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
+		</div>
+		<h1 class="roman">III</h1>
+	</div>
+</a>
+
+
+<!--
+<table class="table-of-contents">
+	<thead>
+		<tr>
+			<th class="col-1">No.1</th>
+			<th>Project</th>
+			<th class="hide-small">Info</th>
+		</tr>
+	</thead>	
+	<tbody>
+			<tr class="row-1">
+				<td class="col-1"> 1</td>
+				<td><a href="#one">LINKEDIN RECRUITER</a></td>
+				<td class="hide-small">REDESIGN, CASE STUDY, UI/UX</td>
+			</tr>
+		<tr class="row-1">
+			<td class="col-1"> 2</td>
+			<td><a href="#two">ELEVATE BY REEBOK</a></td>
+			<td class="hide-small">BRANDING, CONCEPT, UI/UX</td>
+		</tr>
+		<tr class="row-1">
+			<td class="col-1"> 3</td>
+			<td><a href="#three">DOUBLEDOOR TECHNOLOGIES</a></td>
+			<td class="hide-small">INTERNSHIP, AGILE SPRINT, TEAM PROJECT</td>
+		</tr>
+	</tbody>
+</table>
+-->
+
+<a href="https://alvinliu-ixd.myportfolio.com/linkedin-recruiter-redesign-case-study">
+	<div id="one" class="box">
+		<div class="project-info hide-small">
+			<p class="project-no">No.1</p>
+			<h1 class="project-title">LINKEDIN<br>RECRUITER<br>REDESIGN<br></h1>
+			<p class="project-body">I chose to do an in-depth case study on LinkedIn Recruiter. In this case study, I researched and proposed potential hypotheses as to why the app was rated 1.2 out of 5 stars. With my hypotheses, I provided designs of solutions that take Recruiter towards the right direction.</p>
+			
+			<p class="project-categories">INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
+		</div>
+		<img class="image" src="pictures/linkedin.png" alt="Linkedin">
+	</div>
+</a>
+<a href="https://alvinliu-ixd.myportfolio.com/elevate-by-reebok">
+	<div id="two" class="box">
+		<div class="project-info hide-small">
+			<p class="project-no">No.2</p>
 			<h1 class="project-title">ELEVATE<br>BY REEBOK<br></h1>
 			<p class="project-body">Elevate, an all in one fitness app, was designed to create better experiences for new and fresh people starting their fitness journeys. Since the fitness industry is booming, and Reebok turned a different direction with their rebrand to cele-brate the everyday person, I wanted to create a fitness app that was designed for experienced and inexperienced users.</p>
 			<p class="project-categories"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
