--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 </nav>
 
-<a class="navi" href="https://alvinliu-ixd.myportfolio.com/linkedin-recruiter-redesign-case-study">
+<a class="navi" href="#one">
 	<div class="rows topborder">
 		<div>
 			<p class="top">No.1</p>
@@ -40,7 +40,7 @@
 	</div>
 </a>
 
-<a href="https://alvinliu-ixd.myportfolio.com/elevate-by-reebok">
+<a href="#two">
 	<div class="rows"> 
 		<div>
 			<p class="top">No.2</p>
@@ -51,7 +51,7 @@
 	</div>
 </a>
 
-<a href="https://alvinliu-ixd.myportfolio.com/doubledoor-the-negotiation-system">
+<a href="#three">
 	<div class="rows botborder">
 		<div>
 			<p class="top">No.3</p>
