--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<h1 class="mid">LINKEDIN RECRUITER REDESIGN</h1>
 			<p class="bot">INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
 		</div>
-		<h1 class="roman">I</h1>
+		<h1 class="roman hide-small">I</h1>
 	</div>
 </a>
 
@@ -47,7 +47,7 @@
 			<h1 class="mid">ELEVATE BY REEBOK</h1>
 			<p class="bot"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
 		</div>
-		<h1 class="roman">II</h1>
+		<h1 class="roman hide-small">II</h1>
 	</div>
 </a>
 
@@ -58,7 +58,7 @@
 			<h1 class="mid">DOUBLEDOOR NEGOTIATION SYSTEM</h1>
 			<p class="bot"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
 		</div>
-		<h1 class="roman">III</h1>
+		<h1 class="roman hide-small">III</h1>
 	</div>
 </a>
 
