--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div>
 			<p class="top">No.1</p>
 			<h1 class="mid">LINKEDIN RECRUITER REDESIGN</h1>
-			<p class="bot">INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
+			<p class="bot">REDESIGN, CASE STUDY, UI/UX</p>
 		</div>
 		<h1 class="roman hide-small">I</h1>
 	</div>
@@ -45,7 +45,7 @@
 		<div>
 			<p class="top">No.2</p>
 			<h1 class="mid">ELEVATE BY REEBOK</h1>
-			<p class="bot"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
+			<p class="bot"> BRANDING, CONCEPT, UI/UX</p>
 		</div>
 		<h1 class="roman hide-small">II</h1>
 	</div>
@@ -99,7 +99,7 @@
 			<h1 class="project-title">LINKEDIN<br>RECRUITER<br>REDESIGN<br></h1>
 			<p class="project-body">I chose to do an in-depth case study on LinkedIn Recruiter. In this case study, I researched and proposed potential hypotheses as to why the app was rated 1.2 out of 5 stars. With my hypotheses, I provided designs of solutions that take Recruiter towards the right direction.</p>
 			
-			<p class="project-categories">INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
+			<p class="project-categories">REDESIGN, CASE STUDY, UI/UX</p>
 		</div>
 		<img class="image" src="pictures/linkedin.png" alt="Linkedin">
 	</div>
@@ -110,7 +110,7 @@
 			<p class="project-no">No.2</p>
 			<h1 class="project-title">ELEVATE<br>BY REEBOK<br></h1>
 			<p class="project-body">Elevate, an all in one fitness app, was designed to create better experiences for new and fresh people starting their fitness journeys. Since the fitness industry is booming, and Reebok turned a different direction with their rebrand to cele-brate the everyday person, I wanted to create a fitness app that was designed for experienced and inexperienced users.</p>
-			<p class="project-categories"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
+			<p class="project-categories"> BRANDING, CONCEPT, UI/UX</p>
 		</div>
 		<img class="image" src="pictures/elevate.png" alt="Elevate">
 	</div>
