--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<h1 class="mid">LINKEDIN RECRUITER REDESIGN</h1>
 			<p class="bot">REDESIGN, CASE STUDY, UI/UX</p>
 		</div>
-		<h1 class="roman hide-small">I</h1>
+		<h1 class="roman">I</h1>
 	</div>
 </a>
 
@@ -45,9 +45,9 @@
 		<div>
 			<p class="top">No.2</p>
 			<h1 class="mid">ELEVATE BY REEBOK</h1>
-			<p class="bot"> BRANDING, CONCEPT, UI/UX</p>
+			<p class="bot">BRANDING, CONCEPT, UI/UX</p>
 		</div>
-		<h1 class="roman hide-small">II</h1>
+		<h1 class="roman">II</h1>
 	</div>
 </a>
 
@@ -58,7 +58,7 @@
 			<h1 class="mid">DOUBLEDOOR NEGOTIATION SYSTEM</h1>
 			<p class="bot"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
 		</div>
-		<h1 class="roman hide-small">III</h1>
+		<h1 class="roman">III</h1>
 	</div>
 </a>
 
@@ -131,7 +131,7 @@
 <div id="about" class="about-me">
 	<div class="about-text">
 			<h1 class="about-title">ABOUT ME</h1>
-			<p class="about-me-info">As a child up until my senior year of college, I always wanted to work in a field that involved helping others. A superhero in first grade, a firefighter after discovering the concept of fiction, then settled on becoming an occupational therapist throughout my first two years of college. Volunteering over at numerous medical facilities throughout my college years, I finally accepted the realization that this was not a career I wanted to pursue. At the age of 21, I discovered the world of design. As I gained a better understanding of design and the influence it has on people, society, and the world; my interest in the field sparked. I dove right in. I chose to pursue interaction design because I want to help, yes I might not be helping the same way a superhero, firefighter, or therapist would, but I am helping humans interact and communicate with the products they use in their daily life. </p>
+			<p class="about-me-info">I am an Interaction Designer with a degree in psychology. My passion for design and usability stems from oppurtunity. Oppurtunity to identify products that can be improved upon and actively seek ways to improve it. Oppurtunity to change a mundane routine or extraneous task through design.</p>
 	</div>
 	<img class="portrait" src="pictures/me.png" alt="me">
 </div>
@@ -141,7 +141,7 @@
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">ALVIN LIU: IxD DESIGN <br>
-    <a class="linkedin" href="https://mdbootstrap.com/education/bootstrap/"> LETS CONNECT! ADD ME ON LINKEDIN</a>
+    <a class="linkedin" href="https://www.linkedin.com/in/alvin-liu-92a297163/"> LETS CONNECT! ADD ME ON LINKEDIN</a>
   </div>
   <!-- Copyright -->
 
