--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-  <a class="navbar-brand" href="#">ALVIN LIU<br>IxDESIGNER</br></a>
+  <a class="navbar-brand" href="#">ALVIN LIU: IxD</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -33,69 +33,62 @@
 	<div class="rows topborder">
 		<div>
 			<p class="top">No.1</p>
-			<h1 class="mid">LINKEDIN RECRUITER REDESIGN</h1>
-			<p class="bot">REDESIGN, CASE STUDY, UI/UX</p>
+			<h1 class="mid">HOMME: HOW DESIGN CAN IMPACT HOMELESSNESS</h1>
+			<p class="bot">STUDENT PROJECT, CASE STUDY, UI/UX</p>
 		</div>
-		<h1 class="roman">I</h1>
+		<h1 class="roman hide-small">I</h1>
 	</div>
 </a>
 
 <a href="#two">
-	<div class="rows"> 
+	<div class="rows botborder">
 		<div>
 			<p class="top">No.2</p>
-			<h1 class="mid">ELEVATE BY REEBOK</h1>
-			<p class="bot">BRANDING, CONCEPT, UI/UX</p>
+			<h1 class="mid">LINKEDIN RECRUITER REDESIGN</h1>
+			<p class="bot">REDESIGN, CASE STUDY, UI/UX</p>
 		</div>
-		<h1 class="roman">II</h1>
+		<h1 class="roman hide-small">II</h1>
 	</div>
 </a>
 
 <a href="#three">
-	<div class="rows botborder">
+	<div class="rows"> 
 		<div>
 			<p class="top">No.3</p>
-			<h1 class="mid">DOUBLEDOOR NEGOTIATION SYSTEM</h1>
-			<p class="bot"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
+			<h1 class="mid">ELEVATE BY REEBOK</h1>
+			<p class="bot">BRANDING, CONCEPT, UI/UX</p>
 		</div>
-		<h1 class="roman">III</h1>
+		<h1 class="roman hide-small">III</h1>
 	</div>
 </a>
 
+<a href="#four">
+	<div class="rows botborder">
+		<div>
+			<p class="top">No.4</p>
+			<h1 class="mid">DOUBLEDOOR NEGOTIATION SYSTEM</h1>
+			<p class="bot"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
+		</div>
+		<h1 class="roman hide-small">IV</h1>
+	</div>
+</a>
 
-<!--
-<table class="table-of-contents">
-	<thead>
-		<tr>
-			<th class="col-1">No.1</th>
-			<th>Project</th>
-			<th class="hide-small">Info</th>
-		</tr>
-	</thead>	
-	<tbody>
-			<tr class="row-1">
-				<td class="col-1"> 1</td>
-				<td><a href="#one">LINKEDIN RECRUITER</a></td>
-				<td class="hide-small">REDESIGN, CASE STUDY, UI/UX</td>
-			</tr>
-		<tr class="row-1">
-			<td class="col-1"> 2</td>
-			<td><a href="#two">ELEVATE BY REEBOK</a></td>
-			<td class="hide-small">BRANDING, CONCEPT, UI/UX</td>
-		</tr>
-		<tr class="row-1">
-			<td class="col-1"> 3</td>
-			<td><a href="#three">DOUBLEDOOR TECHNOLOGIES</a></td>
-			<td class="hide-small">INTERNSHIP, AGILE SPRINT, TEAM PROJECT</td>
-		</tr>
-	</tbody>
-</table>
--->
-
-<a href="https://alvinliu-ixd.myportfolio.com/linkedin-recruiter-redesign-case-study">
+<a href="https://alvinliu-ixd.myportfolio.com/homme">
 	<div id="one" class="box">
 		<div class="project-info hide-small">
 			<p class="project-no">No.1</p>
+			<h1 class="project-title">HOMME<br>SECTION 8<br>HOUSING APP<br></h1>
+			<p class="project-body">One of the projects that I was assigned to work on was to focus on a form of social injustice and design a app towards the cause. I chose to focus on housing insecurity. Through research, I chose to design an application that streamlines the application process for section 8 landlords and tenants.</p>
+			
+			<p class="project-categories">STUDENT PROJECT, CASE STUDY, UI/UX</p>
+		</div>
+		<img class="image" src="pictures/homme.gif" alt="homme">
+	</div>
+</a>
+<a href="https://alvinliu-ixd.myportfolio.com/linkedin-recruiter-redesign-case-study">
+	<div id="two" class="box">
+		<div class="project-info hide-small">
+			<p class="project-no">No.2</p>
 			<h1 class="project-title">LINKEDIN<br>RECRUITER<br>REDESIGN<br></h1>
 			<p class="project-body">I chose to do an in-depth case study on LinkedIn Recruiter. In this case study, I researched and proposed potential hypotheses as to why the app was rated 1.2 out of 5 stars. With my hypotheses, I provided designs of solutions that take Recruiter towards the right direction.</p>
 			
@@ -105,9 +98,9 @@
 	</div>
 </a>
 <a href="https://alvinliu-ixd.myportfolio.com/elevate-by-reebok">
-	<div id="two" class="box">
+	<div id="three" class="box">
 		<div class="project-info hide-small">
-			<p class="project-no">No.2</p>
+			<p class="project-no">No.3</p>
 			<h1 class="project-title">ELEVATE<br>BY REEBOK<br></h1>
 			<p class="project-body">Elevate, an all in one fitness app, was designed to create better experiences for new and fresh people starting their fitness journeys. Since the fitness industry is booming, and Reebok turned a different direction with their rebrand to cele-brate the everyday person, I wanted to create a fitness app that was designed for experienced and inexperienced users.</p>
 			<p class="project-categories"> BRANDING, CONCEPT, UI/UX</p>
@@ -116,14 +109,14 @@
 	</div>
 </a>
 <a href="https://alvinliu-ixd.myportfolio.com/doubledoor-the-negotiation-system">
-	<div id="three" class="box last-box">
+	<div id="four" class="box last-box">
 		<div class="project-info hide-small">
-			<p class="project-no">No.3</p>
+			<p class="project-no">No.4</p>
 			<h1 class="project-title">DOUBLEDOOR<br>NEGOTIATION<br>SYSTEM<br></h1>
 			<p class="project-body">One of the projects that I was tasked to work on at DoubleDoor Technologies was to ideate and design the negotiation system between buyers and sellers within the website. The sprint lasted 2 weeks and involved designing the dashboard, experience of making an offer, and the counter offer experience.</p>
 			<p class="project-categories"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
 		</div>
-		<img class="image" src="pictures/doubledoor.png" alt="doubledor">
+		<img class="image" src="pictures/doubledoor.gif" alt="doubledor">
 	</div>
 </a>
 
@@ -133,7 +126,6 @@
 			<h1 class="about-title">ABOUT ME</h1>
 			<p class="about-me-info">I am an Interaction Designer with a degree in psychology. My passion for design and usability stems from oppurtunity. Oppurtunity to identify products that can be improved upon and actively seek ways to improve it. Oppurtunity to change a mundane routine or extraneous task through design.</p>
 	</div>
-	<img class="portrait" src="pictures/me.png" alt="me">
 </div>
 
 <!-- Footer -->
