--- a/index.html
+++ b/index.html
@@ -73,58 +73,59 @@
 	</div>
 </a>
 
-<a href="https://alvinliu-ixd.myportfolio.com/homme">
-	<div id="one" class="box">
-		<div class="project-info hide-small">
-			<p class="project-no">No.1</p>
-			<h1 class="project-title">HOMME<br>SECTION 8<br>HOUSING APP<br></h1>
-			<p class="project-body">One of the projects that I was assigned to work on was to focus on a form of social injustice and design a app towards the cause. I chose to focus on housing insecurity. Through research, I chose to design an application that streamlines the application process for section 8 landlords and tenants.</p>
-			
-			<p class="project-categories">STUDENT PROJECT, CASE STUDY, UI/UX</p>
-		</div>
-		<img class="image" src="pictures/homme.gif" alt="homme">
+
+<div id="one" class="box">
+	<div class="project-info hide-small">
+		<p class="project-no">No.1</p>
+		<h1 class="project-title">HOMME<br>SECTION 8<br>HOUSING APP<br></h1>
+		<p class="project-body">For one of my class projects, we were given a task to design an app to tackle a form of social injustice. I chose housing insecurity. Through research, I chose to design an application that streamlines the process for section 8 housing.</p>
+		<a href="https://alvinliu-ixd.myportfolio.com/homme"><button class="button">View case study</button> </a>
+		<p class="project-categories">STUDENT PROJECT, CASE STUDY, UI/UX</p>
 	</div>
-</a>
-<a href="https://alvinliu-ixd.myportfolio.com/linkedin-recruiter-redesign-case-study">
-	<div id="two" class="box">
-		<div class="project-info hide-small">
-			<p class="project-no">No.2</p>
-			<h1 class="project-title">LINKEDIN<br>RECRUITER<br>REDESIGN<br></h1>
-			<p class="project-body">I chose to do an in-depth case study on LinkedIn Recruiter. In this case study, I researched and proposed potential hypotheses as to why the app was rated 1.2 out of 5 stars. With my hypotheses, I provided designs of solutions that take Recruiter towards the right direction.</p>
-			
-			<p class="project-categories">REDESIGN, CASE STUDY, UI/UX</p>
-		</div>
-		<img class="image" src="pictures/linkedin.png" alt="Linkedin">
+	<img class="image" src="pictures/homme.gif" alt="homme">
+</div>
+
+<div id="two" class="box">
+	<div class="project-info hide-small">
+		<p class="project-no">No.2</p>
+		<h1 class="project-title">LINKEDIN<br>RECRUITER<br>REDESIGN<br></h1>
+		<p class="project-body">I chose to do an in-depth case study on LinkedIn Recruiter. In this case study, I researched and proposed potential hypotheses as to why the app was rated 1.2 out of 5 stars. Areas of focus: Messaging system and candidate search.</p>
+		<a href="https://alvinliu-ixd.myportfolio.com/linkedin-recruiter-redesign-case-study"><button class="button">View case study</button></a>
+		<p class="project-categories">REDESIGN, CASE STUDY, UI/UX</p>
 	</div>
-</a>
-<a href="https://alvinliu-ixd.myportfolio.com/elevate-by-reebok">
-	<div id="three" class="box">
-		<div class="project-info hide-small">
-			<p class="project-no">No.3</p>
-			<h1 class="project-title">ELEVATE<br>BY REEBOK<br></h1>
-			<p class="project-body">Elevate, an all in one fitness app, was designed to create better experiences for new and fresh people starting their fitness journeys. Since the fitness industry is booming, and Reebok turned a different direction with their rebrand to cele-brate the everyday person, I wanted to create a fitness app that was designed for experienced and inexperienced users.</p>
-			<p class="project-categories"> BRANDING, CONCEPT, UI/UX</p>
-		</div>
-		<img class="image" src="pictures/elevate.png" alt="Elevate">
+	<img class="image" src="pictures/linkedin.png" alt="Linkedin">
+</div>
+
+
+<div id="three" class="box">
+	<div class="project-info hide-small">
+		<p class="project-no">No.3</p>
+		<h1 class="project-title">ELEVATE<br>BY REEBOK<br>FITNESS APP</h1>
+		<p class="project-body">Since the fitness industry is booming and Reebok turned a different direction to celebrate the everyday person, I wanted to create a fitness app that was designed for experienced and new people in the fitness community</p>
+		<a href="https://alvinliu-ixd.myportfolio.com/elevate-by-reebok"><button class="button">View case study</button></a>
+		<p class="project-categories"> BRANDING, CONCEPT, UI/UX</p>
 	</div>
-</a>
-<a href="https://alvinliu-ixd.myportfolio.com/doubledoor-the-negotiation-system">
-	<div id="four" class="box last-box">
-		<div class="project-info hide-small">
-			<p class="project-no">No.4</p>
-			<h1 class="project-title">DOUBLEDOOR<br>NEGOTIATION<br>SYSTEM<br></h1>
-			<p class="project-body">One of the projects that I was tasked to work on at DoubleDoor Technologies was to ideate and design the negotiation system between buyers and sellers within the website. The sprint lasted 2 weeks and involved designing the dashboard, experience of making an offer, and the counter offer experience.</p>
-			<p class="project-categories"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
-		</div>
-		<img class="image" src="pictures/doubledoor.gif" alt="doubledor">
+	<img class="image" src="pictures/elevate.png" alt="Elevate">
+</div>
+
+
+<div id="four" class="box last-box">
+	<div class="project-info hide-small">
+		<p class="project-no">No.4</p>
+		<h1 class="project-title">DOUBLEDOOR<br>NEGOTIATION<br>SYSTEM<br></h1>
+		<p class="project-body">One of the projects that I was tasked to work on at DoubleDoor Technologies was to ideate and design the negotiation system between buyers and sellers within the website as well as the offer dashboard. The sprint lasted 2 weeks.</p>
+		<a href="https://alvinliu-ixd.myportfolio.com/doubledoor-the-negotiation-system"><button class="button">View case study</button></a>
+		<p class="project-categories"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
 	</div>
-</a>
+	<img class="image" src="pictures/doubledoor.gif" alt="doubledor">
+</div>
+
 
 
 <div id="about" class="about-me">
 	<div class="about-text">
 			<h1 class="about-title">ABOUT ME</h1>
-			<p class="about-me-info">I am an Interaction Designer with a degree in psychology. My passion for design and usability stems from opportunity. Opportunity to identify products that can be improved upon, opportunity to actively seek ways to improve it, and opportunity to change a mundane routine or extraneous task through design.</p>
+			<p class="about-me-info">I am an Interaction Designer with a degree in psychology. My passion for design and usability stems from oppurtunity. Oppurtunity to identify products that can be improved upon and actively seek ways to improve it. Oppurtunity to change a mundane routine or extraneous task through design.</p>
 	</div>
 </div>
 
