--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 		<p class="project-categories">STUDENT PROJECT, CASE STUDY, UI/UX</p>
 		<a href="https://alvinliu-ixd.myportfolio.com/homme"><button class="button">View case study</button> </a>
 	</div>
-	<img class="image" src="pictures/homme.gif" alt="homme">
+	<a href="https://alvinliu-ixd.myportfolio.com/homme">
+		<img class="image" src="pictures/homme.gif" alt="homme">
+	</a>
 </div>
 
 <div id="two" class="box">
@@ -93,7 +95,7 @@
 		<p class="project-categories">REDESIGN, CASE STUDY, UI/UX</p>
 		<a href="https://alvinliu-ixd.myportfolio.com/linkedin-recruiter-redesign-case-study"><button class="button">View case study</button></a>
 	</div>
-	<img class="image" src="pictures/linkedin.png" alt="Linkedin">
+	<a href="https://alvinliu-ixd.myportfolio.com/linkedin-recruiter-redesign-case-study"><img class="image" src="pictures/linkedin.png" alt="Linkedin"></a>
 </div>
 
 
@@ -105,7 +107,7 @@
 		<p class="project-categories"> BRANDING, CONCEPT, UI/UX</p>
 		<a href="https://alvinliu-ixd.myportfolio.com/elevate-by-reebok"><button class="button">View case study</button></a>	
 	</div>
-	<img class="image" src="pictures/elevate.png" alt="Elevate">
+	<a href="https://alvinliu-ixd.myportfolio.com/elevate-by-reebok"><img class="image" src="pictures/elevate.png" alt="Elevate"></a>
 </div>
 
 
@@ -116,9 +118,10 @@
 		<p class="project-body">One of the projects that I was tasked to work on at DoubleDoor Technologies was to ideate and design the negotiation system between buyers and sellers within the website as well as the offer dashboard. The sprint lasted 2 weeks.</p>
 		<p class="project-categories"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
 		<a href="https://alvinliu-ixd.myportfolio.com/doubledoor-the-negotiation-system"><button class="button">View case study</button></a>
-		
-	</div>
-	<img class="image" src="pictures/doubledoor.gif" alt="doubledor">
+		</div>
+	<a href="https://alvinliu-ixd.myportfolio.com/doubledoor-the-negotiation-system">
+		<img class="image" src="pictures/doubledoor.gif" alt="doubledor">
+	</a>
 </div>
 
 
