--- a/index.html
+++ b/index.html
@@ -40,36 +40,47 @@
 	</div>
 </a>
 
+<a href="#five">
+	<div class="rows topborder">
+		<div>
+			<p class="top">No.2</p>
+			<h1 class="mid">AMAZON CARE: UTILIZING LOCKERS FOR SOCIAL GOOD</h1>
+			<p class="bot">STUDENT PROJECT, USER RESEARCH, HI-FIDELITY PROTOTYPE</p>
+		</div>
+		<h1 class="roman hide-small">II</h1>
+	</div>
+</a>
+
 <a href="#two">
 	<div class="rows botborder">
 		<div>
-			<p class="top">No.2</p>
+			<p class="top">No.3</p>
 			<h1 class="mid">LINKEDIN RECRUITER REDESIGN</h1>
 			<p class="bot">REDESIGN, CASE STUDY, UI/UX</p>
 		</div>
-		<h1 class="roman hide-small">II</h1>
+		<h1 class="roman hide-small">III</h1>
 	</div>
 </a>
 
 <a href="#three">
 	<div class="rows"> 
 		<div>
-			<p class="top">No.3</p>
+			<p class="top">No.4</p>
 			<h1 class="mid">ELEVATE BY REEBOK</h1>
 			<p class="bot">BRANDING, CONCEPT, UI/UX</p>
 		</div>
-		<h1 class="roman hide-small">III</h1>
+		<h1 class="roman hide-small">IV</h1>
 	</div>
 </a>
 
 <a href="#four">
 	<div class="rows botborder">
 		<div>
-			<p class="top">No.4</p>
+			<p class="top">No.5</p>
 			<h1 class="mid">DOUBLEDOOR NEGOTIATION SYSTEM</h1>
 			<p class="bot"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
 		</div>
-		<h1 class="roman hide-small">IV</h1>
+		<h1 class="roman hide-small">V</h1>
 	</div>
 </a>
 
@@ -87,9 +98,23 @@
 	</a>
 </div>
 
-<div id="two" class="box">
+<div id="five" class="box">
 	<div class="project-info hide-small">
 		<p class="project-no">No.2</p>
+		<h1 class="project-title">AMAZON CARE<br>CONCEPTUAL<br>APPLICATION<br></h1>
+		<p class="project-body">One of the projects that I was tasked to work on at DoubleDoor Technologies was to ideate and design the negotiation system between buyers and sellers within the website as well as the offer dashboard. The sprint lasted 2 weeks.</p>
+		<p class="project-categories"> STUDENT PROJECT, USER RESEARCH, HI-FIDELITY PROTOTYPE</p>
+		<a href="https://alvinliu-ixd.myportfolio.com/care-by-amazon-utilizing-amazon-lockers-to-help"><button class="button">View case study</button></a>
+		</div>
+	<a href="https://alvinliu-ixd.myportfolio.com/care-by-amazon-utilizing-amazon-lockers-to-help">
+		<img class="image" src="pictures/care_cover.gif" alt="doubledor">
+	</a>
+</div>
+
+
+<div id="two" class="box">
+	<div class="project-info hide-small">
+		<p class="project-no">No.3</p>
 		<h1 class="project-title">LINKEDIN<br>RECRUITER<br>REDESIGN<br></h1>
 		<p class="project-body">I chose to do an in-depth case study on LinkedIn Recruiter. In this case study, I researched and proposed potential hypotheses as to why the app was rated 1.2 out of 5 stars. Areas of focus: Messaging system and candidate search.</p>
 		<p class="project-categories">REDESIGN, CASE STUDY, UI/UX</p>
@@ -101,7 +126,7 @@
 
 <div id="three" class="box">
 	<div class="project-info hide-small">
-		<p class="project-no">No.3</p>
+		<p class="project-no">No.4</p>
 		<h1 class="project-title">ELEVATE<br>BY REEBOK<br>FITNESS APP</h1>
 		<p class="project-body">Since the fitness industry is booming and Reebok turned a different direction to celebrate the everyday person, I wanted to create a fitness app that was designed for experienced and new people in the fitness community</p>
 		<p class="project-categories"> BRANDING, CONCEPT, UI/UX</p>
@@ -113,7 +138,7 @@
 
 <div id="four" class="box last-box">
 	<div class="project-info hide-small">
-		<p class="project-no">No.4</p>
+		<p class="project-no">No.5</p>
 		<h1 class="project-title">DOUBLEDOOR<br>NEGOTIATION<br>SYSTEM<br></h1>
 		<p class="project-body">One of the projects that I was tasked to work on at DoubleDoor Technologies was to ideate and design the negotiation system between buyers and sellers within the website as well as the offer dashboard. The sprint lasted 2 weeks.</p>
 		<p class="project-categories"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
