--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 <div id="about" class="about-me">
 	<div class="about-text">
 			<h1 class="about-title">ABOUT ME</h1>
-			<p class="about-me-info">I am an Interaction Designer with a degree in psychology. My passion for design and usability stems from oppurtunity. Oppurtunity to identify products that can be improved upon and actively seek ways to improve it. Oppurtunity to change a mundane routine or extraneous task through design.</p>
+			<p class="about-me-info">I am an Interaction Designer with a degree in psychology. My passion for design and usability stems from opportunity. Opportunity to identify products that can be improved upon and actively seek ways to improve it. Opportunity to change a mundane routine or extraneous task through design.</p>
 	</div>
 </div>
 
