--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<div>
 			<p class="top">No.1</p>
 			<h1 class="mid">HOMME: HOW DESIGN CAN IMPACT HOMELESSNESS</h1>
-			<p class="bot">STUDENT PROJECT, CASE STUDY, UI/UX</p>
+			<p class="bot">MOBILE APPICATION, CASE STUDY, UI/UX</p>
 		</div>
 		<h1 class="roman hide-small">I</h1>
 	</div>
@@ -45,7 +45,7 @@
 		<div>
 			<p class="top">No.2</p>
 			<h1 class="mid">AMAZON CARE: UTILIZING LOCKERS FOR SOCIAL GOOD</h1>
-			<p class="bot">STUDENT PROJECT, USER RESEARCH, HI-FIDELITY PROTOTYPE</p>
+			<p class="bot">MOBILE APPLICATION</p>
 		</div>
 		<h1 class="roman hide-small">II</h1>
 	</div>
@@ -56,7 +56,7 @@
 		<div>
 			<p class="top">No.3</p>
 			<h1 class="mid">LINKEDIN RECRUITER REDESIGN</h1>
-			<p class="bot">REDESIGN, CASE STUDY, UI/UX</p>
+			<p class="bot">MOBILE APP, REDESIGN, CASE STUDY, UI/UX</p>
 		</div>
 		<h1 class="roman hide-small">III</h1>
 	</div>
@@ -77,8 +77,8 @@
 	<div class="rows botborder">
 		<div>
 			<p class="top">No.5</p>
-			<h1 class="mid">DOUBLEDOOR NEGOTIATION SYSTEM</h1>
-			<p class="bot"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
+			<h1 class="mid">DOUBLEDOOR NEGOTIATION RE</h1>
+			<p class="bot">WEB APPLICATION, INTERNSHIP, TEAM PROJECT</p>
 		</div>
 		<h1 class="roman hide-small">V</h1>
 	</div>
@@ -102,7 +102,7 @@
 	<div class="project-info hide-small">
 		<p class="project-no">No.2</p>
 		<h1 class="project-title">AMAZON CARE<br>CONCEPTUAL<br>APPLICATION<br></h1>
-		<p class="project-body">One of the projects that I was tasked to work on at DoubleDoor Technologies was to ideate and design the negotiation system between buyers and sellers within the website as well as the offer dashboard. The sprint lasted 2 weeks.</p>
+		<p class="project-body">Designing a mobile application that utilizes Amazon lockers to give towards the ones in need.</p>
 		<p class="project-categories"> STUDENT PROJECT, USER RESEARCH, HI-FIDELITY PROTOTYPE</p>
 		<a href="https://alvinliu-ixd.myportfolio.com/care-by-amazon-utilizing-amazon-lockers-to-help"><button class="button">View case study</button></a>
 		</div>
