--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div>
 			<p class="top">No.2</p>
 			<h1 class="mid">AMAZON CARE: UTILIZING LOCKERS FOR SOCIAL GOOD</h1>
-			<p class="bot">MOBILE APPLICATION</p>
+			<p class="bot">MOBILE APPLICATION, CONCEPT PROJECT, UI/UX</p>
 		</div>
 		<h1 class="roman hide-small">II</h1>
 	</div>
