--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<div>
 			<p class="top">No.3</p>
 			<h1 class="mid">LINKEDIN RECRUITER REDESIGN</h1>
-			<p class="bot">MOBILE APP, REDESIGN, CASE STUDY, UI/UX</p>
+			<p class="bot">MOBILE APPLICATION, REDESIGN, CASE STUDY, UI/UX</p>
 		</div>
 		<h1 class="roman hide-small">III</h1>
 	</div>
