--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 	<div class="rows botborder">
 		<div>
 			<p class="top">No.3</p>
-			<h1 class="mid">LINKEDIN RECRUITER REDESIGN</h1>
-			<p class="bot">MOBILE APPLICATION, REDESIGN, CASE STUDY, UI/UX</p>
+			<h1 class="mid">NEURA: WHAT IF WE COULD STUDY IN VR?</h1>
+			<p class="bot">DESKTOP APPLICATION, CASE STUDY, UI/UX</p>
 		</div>
 		<h1 class="roman hide-small">III</h1>
 	</div>
@@ -115,12 +115,12 @@
 <div id="two" class="box">
 	<div class="project-info hide-small">
 		<p class="project-no">No.3</p>
-		<h1 class="project-title">LINKEDIN<br>RECRUITER<br>REDESIGN<br></h1>
-		<p class="project-body">I chose to do an in-depth case study on LinkedIn Recruiter. In this case study, I researched and proposed potential hypotheses as to why the app was rated 1.2 out of 5 stars. Areas of focus: Messaging system and candidate search.</p>
+		<h1 class="project-title">NEURA<br>NOTES<br>DESKTOP/VR<br></h1>
+		<p class="project-body">Neura notes, a studying experience aimed to enhance the learning experience for people with ADHD. Neura notes is a notetaking platform that allows you to take your studying into your own virtual space</p>
 		<p class="project-categories">REDESIGN, CASE STUDY, UI/UX</p>
 		<a href="https://alvinliu-ixd.myportfolio.com/linkedin-recruiter-redesign-case-study"><button class="button">View case study</button></a>
 	</div>
-	<a href="https://alvinliu-ixd.myportfolio.com/linkedin-recruiter-redesign-case-study"><img class="image" src="pictures/linkedin.png" alt="Linkedin"></a>
+	<a href="https://alvinliu-ixd.myportfolio.com/neura-what-if-you-could-study-in-virtual-reality"><img class="image" src="pictures/Neura.png" alt="Neura"></a>
 </div>
 
 
