--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 <div id="two" class="box">
 	<div class="project-info hide-small">
 		<p class="project-no">No.3</p>
-		<h1 class="project-title">NEURA<br>NOTES<br>DESKTOP/VR<br></h1>
+		<h1 class="project-title">NEURA NOTES<br>DESKTOP & VR<br>EXPERIENCE<br></h1>
 		<p class="project-body">Neura notes, a studying experience aimed to enhance the learning experience for people with ADHD. Neura notes is a notetaking platform that allows you to take your studying into your own virtual space</p>
 		<p class="project-categories">REDESIGN, CASE STUDY, UI/UX</p>
 		<a href="https://alvinliu-ixd.myportfolio.com/neura-what-if-you-could-study-in-virtual-reality"><button class="button">View case study</button></a>
