--- a/index.html
+++ b/index.html
@@ -40,47 +40,58 @@
 	</div>
 </a>
 
-<a href="#five">
+<a href="#two">
 	<div class="rows topborder">
 		<div>
 			<p class="top">No.2</p>
-			<h1 class="mid">AMAZON CARE: UTILIZING LOCKERS FOR SOCIAL GOOD</h1>
-			<p class="bot">MOBILE APPLICATION, CONCEPT PROJECT, UI/UX</p>
+			<h1 class="mid">SNAP INC</h1>
+			<p class="bot">SNAP BINGO, CODE WITH FRIENDS, UI/UX</p>
 		</div>
 		<h1 class="roman hide-small">II</h1>
 	</div>
 </a>
 
-<a href="#two">
-	<div class="rows botborder">
+<a href="#three">
+	<div class="rows topborder">
 		<div>
 			<p class="top">No.3</p>
-			<h1 class="mid">NEURA: WHAT IF WE COULD STUDY IN VR?</h1>
-			<p class="bot">DESKTOP APPLICATION, CASE STUDY, UI/UX</p>
+			<h1 class="mid">AMAZON CARE: UTILIZING LOCKERS FOR SOCIAL GOOD</h1>
+			<p class="bot">MOBILE APPLICATION, CONCEPT PROJECT, UI/UX</p>
 		</div>
 		<h1 class="roman hide-small">III</h1>
-	</div>
-</a>
-
-<a href="#three">
-	<div class="rows"> 
-		<div>
-			<p class="top">No.4</p>
-			<h1 class="mid">ELEVATE BY REEBOK</h1>
-			<p class="bot">BRANDING, CONCEPT, UI/UX</p>
-		</div>
-		<h1 class="roman hide-small">IV</h1>
 	</div>
 </a>
 
 <a href="#four">
 	<div class="rows botborder">
 		<div>
+			<p class="top">No.4</p>
+			<h1 class="mid">NEURA: WHAT IF WE COULD STUDY IN VR?</h1>
+			<p class="bot">DESKTOP APPLICATION, CASE STUDY, UI/UX</p>
+		</div>
+		<h1 class="roman hide-small">IV</h1>
+	</div>
+</a>
+
+<a href="#five">
+	<div class="rows"> 
+		<div>
 			<p class="top">No.5</p>
+			<h1 class="mid">ELEVATE BY REEBOK</h1>
+			<p class="bot">BRANDING, CONCEPT, UI/UX</p>
+		</div>
+		<h1 class="roman hide-small">V</h1>
+	</div>
+</a>
+
+<a href="#six">
+	<div class="rows botborder">
+		<div>
+			<p class="top">No.6</p>
 			<h1 class="mid">DOUBLEDOOR NEGOTIATION RE</h1>
 			<p class="bot">WEB APPLICATION, INTERNSHIP, TEAM PROJECT</p>
 		</div>
-		<h1 class="roman hide-small">V</h1>
+		<h1 class="roman hide-small">VI</h1>
 	</div>
 </a>
 
@@ -98,23 +109,36 @@
 	</a>
 </div>
 
-<div id="five" class="box">
+<div id="two" class="box">
 	<div class="project-info hide-small">
 		<p class="project-no">No.2</p>
+		<h1 class="project-title">SNAP INC<br>         <br>         <br></h1>
+		<p class="project-body">As a design scholar at Snap Inc, I was given the opportunity to conceptualize and present features that live within the Snapchat application.</p>
+		<p class="project-categories"> SNAP BINGO, CODE WITH FRIENDS, UI/UX</p>
+		<a href="https://alvinliu-ixd.myportfolio.com/care-by-amazon-utilizing-amazon-lockers-to-help"><button class="button">View case study</button></a>
+		</div>
+	<a href="https://alvinliu-ixd.myportfolio.com/care-by-amazon-utilizing-amazon-lockers-to-help">
+		<img class="image" src="pictures/snap.gif" alt="snap logo">
+	</a>
+</div>
+
+<div id="three" class="box">
+	<div class="project-info hide-small">
+		<p class="project-no">No.3</p>
 		<h1 class="project-title">AMAZON CARE<br>CONCEPTUAL<br>APPLICATION<br></h1>
 		<p class="project-body">Designing a mobile application that utilizes Amazon lockers to give towards the ones in need.</p>
 		<p class="project-categories"> STUDENT PROJECT, USER RESEARCH, HI-FIDELITY PROTOTYPE</p>
 		<a href="https://alvinliu-ixd.myportfolio.com/care-by-amazon-utilizing-amazon-lockers-to-help"><button class="button">View case study</button></a>
 		</div>
 	<a href="https://alvinliu-ixd.myportfolio.com/care-by-amazon-utilizing-amazon-lockers-to-help">
-		<img class="image" src="pictures/care_cover.gif" alt="doubledor">
+		<img class="image" src="pictures/care_cover.gif" alt="amazon care">
 	</a>
 </div>
 
 
-<div id="two" class="box">
+<div id="four" class="box">
 	<div class="project-info hide-small">
-		<p class="project-no">No.3</p>
+		<p class="project-no">No.4</p>
 		<h1 class="project-title">NEURA NOTES<br>DESKTOP & VR<br>EXPERIENCE<br></h1>
 		<p class="project-body">Neura notes, a studying experience aimed to enhance the learning experience for people with ADHD. Neura notes is a notetaking platform that allows you to take your studying into your own virtual space</p>
 		<p class="project-categories">REDESIGN, CASE STUDY, UI/UX</p>
@@ -124,9 +148,9 @@
 </div>
 
 
-<div id="three" class="box">
+<div id="five" class="box">
 	<div class="project-info hide-small">
-		<p class="project-no">No.4</p>
+		<p class="project-no">No.5</p>
 		<h1 class="project-title">ELEVATE<br>BY REEBOK<br>FITNESS APP</h1>
 		<p class="project-body">Since the fitness industry is booming and Reebok turned a different direction to celebrate the everyday person, I wanted to create a fitness app that was designed for experienced and new people in the fitness community</p>
 		<p class="project-categories"> BRANDING, CONCEPT, UI/UX</p>
@@ -136,9 +160,9 @@
 </div>
 
 
-<div id="four" class="box last-box">
+<div id="six" class="box last-box">
 	<div class="project-info hide-small">
-		<p class="project-no">No.5</p>
+		<p class="project-no">No.6</p>
 		<h1 class="project-title">DOUBLEDOOR<br>NEGOTIATION<br>SYSTEM<br></h1>
 		<p class="project-body">One of the projects that I was tasked to work on at DoubleDoor Technologies was to ideate and design the negotiation system between buyers and sellers within the website as well as the offer dashboard. The sprint lasted 2 weeks.</p>
 		<p class="project-categories"> INTERNSHIP, AGILE SPRINT, TEAM PROJECT</p>
