--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		<a href="https://alvinliu-ixd.myportfolio.com/snap-inc-my-experience"><button class="button">View case study</button></a>
 		</div>
 	<a href="https://alvinliu-ixd.myportfolio.com/snap-inc-my-experience">
-		<img class="image" src="pictures/snap.gif" alt="snap logo">
+		<img class="image" src="pictures/Snap.gif" alt="snap">
 	</a>
 </div>
 
